[package]
name = "forza_telemetry_v3_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# wgpu backend instead of the default glow/OpenGL one (avoids egui_glow's OpenGL 2.0+ requirement)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland", "accesskit"] }
dirs = "5"
